modified:   tablas.html

--- a/tablas.html
+++ b/tablas.html
@@ -6,11 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
-      <p>Tabla de películas, directores y guionistas</p>
-      <th>
-        películas
-      </th> 
+    <table style="border:1px solid" cellspacing="5" cellpadding="10" >
+      <caption>Tabla de películas, directores y guionistas</caption>
+      <thead>
+        <tr>
+          <th>PELICULAS</th>
+          <th>DIRECTORES</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Los otros</td>
+          <td>Alejandro amenábar</td>
+        </tr>
+        <tr>
+          <td>Abre los ojos</td>
+          <td>Alejandro Amenábar</td>
+        </tr>
+      </tbody>  
     </table>
 </body>
 </html>
