new file:   ejemplocss.html 	modified:   tablas.html

--- a/tablas.html
+++ b/tablas.html
@@ -12,17 +12,26 @@
         <tr>
           <th>PELICULAS</th>
           <th>DIRECTORES</th>
+          <th>GUIONISTAS</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>Los otros</td>
           <td>Alejandro amenábar</td>
+          <td>Alejandro amenábar</td>
         </tr>
         <tr>
           <td>Abre los ojos</td>
           <td>Alejandro Amenábar</td>
+          <td>Mateo Gil</td>
         </tr>
+        <tr>
+          <td>Los pájaros</td>
+          <td>Alfred Hitchcock</td>
+          <td>Evan Hunter</td>
+        </tr>
+        
       </tbody>  
     </table>
 </body>
