--- a/tablas.html
+++ b/tablas.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+      td {
+        border: 1px black;
+      }
+    </style>
 </head>
 <body>
-    <table style="border:1px solid" cellspacing="5" cellpadding="10" >
+    <table style="border:1px solid" cellspacing="10" cellpadding="5" >
       <caption>Tabla de películas, directores y guionistas</caption>
       <thead>
         <tr>
-          <th>PELICULAS</th>
-          <th>DIRECTORES</th>
-          <th>GUIONISTAS</th>
+          <th>Películas</th>
+          <th>Directores</th>
+          <th>Guionistas</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Los otros</td>
+          <td>Los otros <img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="peli" height="50"></td>
           <td>Alejandro amenábar</td>
           <td>Alejandro amenábar</td>
         </tr>
@@ -32,6 +38,29 @@
           <td>Evan Hunter</td>
         </tr>
         
+      </tbody>  
+    </table>
+
+    <table style="border:1px solid" cellspacing="10" cellpadding="5" >
+      <caption>Tabla de películas, directores y guionistas</caption>
+      <thead>
+        <tr>
+          <th>Películas</th>
+          <th>Directores</th>
+          <th>Guionistas</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Los otros</td>
+          <td>Alejandro amenábar</td>
+          <td>Alejandro amenábar</td>
+        </tr>
+        <tr>
+          <td>Abre los ojos</td>
+          <td>Alejandro Amenábar</td>
+          <td>Mateo Gil</td>
+        </tr> 
       </tbody>  
     </table>
 </body>
