modified:   tablas.html

--- a/tablas.html
+++ b/tablas.html
@@ -6,13 +6,42 @@
     <title>Document</title>
 
     <style>
-      td {
-        border: 1px black;
+      td ,tr{
+        border: 1px solid black;
+        text-align: center;
       }
     </style>
 </head>
 <body>
-    <table style="border:1px solid" cellspacing="10" cellpadding="5" >
+    <table cellspacing="4" cellpadding="4" >
+      <caption>Tabla de películas, directores y guionistas</caption>
+      <thead>
+        <tr>
+          <th>Películas</th>
+          <th>Directores</th>
+          <th>Guionistas</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Los otros <img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="peli" height="50"></td>
+          <td colspan="2">Alejandro amenábar</td>
+        </tr>
+        <tr>
+          <td>Abre los ojos <img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="peli" height="50"></td>
+          <td>Alejandro Amenábar</td>
+          <td>Mateo Gil</td>
+        </tr>
+        <tr>
+          <td>Los pájaros <img src="https://pics.filmaffinity.com/alfred_hitchcock_s_the_birds-851609530-mmed.jpg" alt="peli" height="50"></td>
+          <td>Alfred Hitchcock</td>
+          <td>Evan Hunter</td>
+        </tr>
+        
+      </tbody>  
+    </table>
+
+    <table cellspacing="4" cellpadding="4" >
       <caption>Tabla de películas, directores y guionistas</caption>
       <thead>
         <tr>
@@ -28,36 +57,7 @@
           <td>Alejandro amenábar</td>
         </tr>
         <tr>
-          <td>Abre los ojos</td>
-          <td>Alejandro Amenábar</td>
-          <td>Mateo Gil</td>
-        </tr>
-        <tr>
-          <td>Los pájaros</td>
-          <td>Alfred Hitchcock</td>
-          <td>Evan Hunter</td>
-        </tr>
-        
-      </tbody>  
-    </table>
-
-    <table style="border:1px solid" cellspacing="10" cellpadding="5" >
-      <caption>Tabla de películas, directores y guionistas</caption>
-      <thead>
-        <tr>
-          <th>Películas</th>
-          <th>Directores</th>
-          <th>Guionistas</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Los otros</td>
-          <td>Alejandro amenábar</td>
-          <td>Alejandro amenábar</td>
-        </tr>
-        <tr>
-          <td>Abre los ojos</td>
+          <td>Abre los ojos <img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="peli" height="50"></td>
           <td>Alejandro Amenábar</td>
           <td>Mateo Gil</td>
         </tr> 
