modified:   ejemplocss.html

--- a/ejemplocss.html
+++ b/ejemplocss.html
@@ -74,7 +74,7 @@
         }
 
         /*cambia el color del párrafo con el span especial*/
-        p span.especial {
+        span.especial {
             color: #ff3fff;
         }
 
