--- a/Actividad 8.8.html
+++ b/Actividad 8.8.html
@@ -23,49 +23,88 @@
             padding: 15px;
         }
 
-        
+        .teal {
+            color: teal;
+        }
+
+        .red {
+            color: red;
+        }
+
+        .blue {
+            color: blue;
+        }
+
+        .orange {
+            color: orange;
+        }
+
+        .purple {
+            color: purple;
+        }
+
+        .olive {
+            color: olive;
+        }
+         
+        .fuchsia {
+            color: fuchsia;
+        }
+
+        .green {
+            color: green;
+        }
 
     </style>
 
   </head>
   <body>
     <table border="1">
-      <tr> 
+      <tr class="teal"> 
         <td>teal</td>
         <td>teal</td>
         <td>teal</td>
+        <td>teal</td>
       </tr>
-      <tr>
+
+      <tr class="red">
         <td>red</td>
         <td>red</td>
         <td>red</td>
+        <td>red</td>
       </tr>
-      <tr>
+      <tr class="blue">
         <td>blue</td>
         <td>blue</td>
         <td>blue</td>
+        <td>blue</td>
       </tr>
-      <tr>
+      <tr class="orange">
         <td>orange</td>
         <td>orange</td>
         <td>orange</td>
+        <td>orange</td>
       </tr>
-      <tr>
+      <tr class="purple">
         <td>purple</td>
         <td>purple</td>
         <td>purple</td>
+        <td>purple</td>
       </tr>
-      <tr>
+      <tr class="olive">
         <td>olive</td>
         <td>olive</td>
         <td>olive</td>
+        <td>olive</td>
       </tr>
-      <tr>
+      <tr class="fuchsia">
+        <td>fuchsia</td>
         <td>fuchsia</td>
         <td>fuchsia</td>
         <td>fuchsia</td>
       </tr>
-      <tr>
+      <tr class="green">
+        <td>green</td>
         <td>green</td>
         <td>green</td>
         <td>green</td>
