--- a/Actividad 8.8.html
+++ b/Actividad 8.8.html
@@ -54,6 +54,19 @@
         .green {
             color: green;
         }
+         
+        .column-red {
+            background-color: red;
+        }
+
+        .column-green {
+            background-color: green;
+        }
+        
+        .column-blue {
+            background-color: blue;
+        }
+
 
     </style>
 
@@ -62,52 +75,52 @@
     <table border="1">
       <tr class="teal"> 
         <td>teal</td>
-        <td>teal</td>
-        <td>teal</td>
-        <td>teal</td>
+        <td class="column-red">teal</td>
+        <td class="column-green">teal</td>
+        <td class="column-blue">teal</td>
       </tr>
 
       <tr class="red">
         <td>red</td>
-        <td>red</td>
-        <td>red</td>
-        <td>red</td>
+        <td class="column-red">red</td>
+        <td class="column-green">red</td>
+        <td class="column-blue">red</td>
       </tr>
       <tr class="blue">
         <td>blue</td>
-        <td>blue</td>
-        <td>blue</td>
-        <td>blue</td>
+        <td class="column-red">blue</td>
+        <td class="column-green">blue</td>
+        <td class="column-blue">blue</td>
       </tr>
       <tr class="orange">
         <td>orange</td>
-        <td>orange</td>
-        <td>orange</td>
-        <td>orange</td>
+        <td class="column-red">orange</td>
+        <td class="column-green">orange</td>
+        <td class="column-blue">orange</td>
       </tr>
       <tr class="purple">
         <td>purple</td>
-        <td>purple</td>
-        <td>purple</td>
-        <td>purple</td>
+        <td class="column-red">purple</td>
+        <td class="column-green">purple</td>
+        <td class="column-blue">purple</td>
       </tr>
       <tr class="olive">
         <td>olive</td>
-        <td>olive</td>
-        <td>olive</td>
-        <td>olive</td>
+        <td class="column-red">olive</td>
+        <td class="column-green">olive</td>
+        <td class="column-blue">olive</td>
       </tr>
       <tr class="fuchsia">
         <td>fuchsia</td>
-        <td>fuchsia</td>
-        <td>fuchsia</td>
-        <td>fuchsia</td>
+        <td class="column-red">fuchsia</td>
+        <td class="column-green">fuchsia</td>
+        <td class="column-blue">fuchsia</td>
       </tr>
       <tr class="green">
         <td>green</td>
-        <td>green</td>
-        <td>green</td>
-        <td>green</td>
+        <td class="column-red">green</td>
+        <td class="column-green">green</td>
+        <td class="column-blue">green</td>
       </tr>
     </table>
   </body>
