modified:   actividad 8.4/indice.html 	modified:   actividad 8.4/portofolio/indiceportofolio.html 	new file:   actividad 8.4/portofolio/photojak.png 	new file:   actividad 8.4/portofolio/veracruz.png

--- a/actividad 8.4/indice.html
+++ b/actividad 8.4/indice.html
@@ -10,6 +10,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum, temporibus a atque quod accusamus quaerat eum porro. Ipsam ea et totam dolorem, eveniet quod qui hic minus molestias! Provident, in?</p>
     <h2><strong>Últimos proyectos</strong></h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique quidem, enim voluptatibus voluptas dolore, laborum, veniam maiores debitis vero illum voluptatum provident fugiat aut quibusdam fugit doloribus adipisci amet! Nisi!</p>
-    <a href="indiceportofolio.html">Últimos proyectos</a>
+    <a href="./portofolio/indiceportofolio.html">Últimos proyectos</a>
 </body>
 </html>
