--- a/actividad 8.4/portofolio/indiceportofolio.html
+++ b/actividad 8.4/portofolio/indiceportofolio.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>indiceportofolio</title>
 </head>
 <body>
-    
+    <h1>Últimos proyectos</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis est neque ipsam aliquam at alias debitis esse necessitatibus rem sequi, dolorem facilis sunt dignissimos qui officia non, odit quod!</p>
+    <h2>Proyecto 1 <a href="/actividad 8.4/portofolio/proyecto1.html">Ir</a></h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat nihil illum nulla odit dolores? Maiores eos veritatis expedita voluptatum perferendis consequatur magni ad vel animi itaque nihil, blanditiis distinctio.</p>
+    <a href="veracruz.png">Imagen del proyecto 1</a>
+    <h2>Proyecto 2 <a href="/actividad 8.4/portofolio/proyecto2.html">Ir</a></h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat explicabo tempora similique. Ducimus error deserunt dolore in doloremque dolores ratione, ex cumque quasi, id labore eum quam voluptate omnis ipsa?</p>
+    <a href="photojak.png">Imagen del proyecto 2</a>
 </body>
 </html>
