modified:   PRUEBA/index.html 	new file:   PRUEBA/pagina1.html 	new file:   PRUEBA/pagina2.html 	new file:   actividad 8.4/portofolio/images.jpg

--- a/PRUEBA/index.html
+++ b/PRUEBA/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Índice</title>
 </head>
-<body>
+    <!--Enlaces de las diferentes páginas-->
+    <div class="enlaces">
+    <p><a href="index.html">Inicio</a> 
+        <a href="pagina1.html">Galería</a>
+        <a href="página2.html">Tabla</a></p>
+    </div>
+
+    <!--El título y subtítulo-->    
+    <h1>Bienvenidos a nuestra página</h1>
+    <p>Este es un párrafo de bienvenida. Aquí aprenderas a usar <strong>HTML</strong> y CSS de manera sencilla</p>
     
+    <!--El resto de la página-->
+    <div class="divinicio">
+        <p>Dentro de este div puedes poner múltiples elementos como listas y enlaces</p>
+
+        <ul>
+            <li><a href="/actividad 8.4/portofolio/veracruz.png">Enlace 1</a></li>
+            <li><a href="/actividad 8.4/portofolio/images.jpg">Enlace 2</a></li>
+        </ul>
+        
+        <ol>
+            <li>Elemento ordenado 1</li>
+            <li>Elemento ordenado 2</li>
+        </ol>
+
+    </div>    
 </body>
 </html>
