--- a/PRUEBA/index.html
+++ b/PRUEBA/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Índice</title>
 </head>
+<body>
     <!--Enlaces de las diferentes páginas-->
     <div class="enlaces">
     <p><a href="index.html">Inicio</a> 
-        <a href="pagina1.html">Galería</a>
-        <a href="página2.html">Tabla</a></p>
+        <a href="pagina2.html">Galería</a>
+        <a href="/PRUEBA/pagina3.html">Tabla</a></p>
     </div>
 
     <!--El título y subtítulo-->    
     <h1>Bienvenidos a nuestra página</h1>
     <p>Este es un párrafo de bienvenida. Aquí aprenderas a usar <strong>HTML</strong> y CSS de manera sencilla</p>
     
-    <!--El resto de la página-->
+    <!--Aquí están las listas ordenadas y desordenadas-->
     <div class="divinicio">
         <p>Dentro de este div puedes poner múltiples elementos como listas y enlaces</p>
 
-        <ul>
+        <ul>             <!--Las imagenes de veracruz y simpsonized-->  
             <li><a href="/actividad 8.4/portofolio/veracruz.png">Enlace 1</a></li>
             <li><a href="/actividad 8.4/portofolio/images.jpg">Enlace 2</a></li>
         </ul>
