modified:   PRUEBA/pagina2.html

--- a/PRUEBA/pagina2.html
+++ b/PRUEBA/pagina2.html
@@ -13,6 +13,7 @@
     <div class="galeria">
         <img src="https://i1.sndcdn.com/artworks-wQI5z8TJX0UoTRog-zmxDAA-t1080x1080.jpg" height="200">
         <img src="https://cdn-images.dzcdn.net/images/cover/173ba7fc2bbf9e902b61a5636a3b6dc7/0x1900-000000-80-0-0.jpg" height="200">
+        <img src="https://media.discordapp.net/attachments/1334146004869447681/1375324788804943992/image0.jpg?ex=68314685&is=682ff505&hm=babf62ba76cfe56d3ea5ba4b38c059e1e598385863eb5c6ea070bb06ac8111a3&=&format=webp&width=654&height=654" height="200">
     </div>
 
 </body>
