--- a/pagina de pirateria/pagina.html
+++ b/pagina de pirateria/pagina.html
@@ -19,10 +19,10 @@
     }
 
     .box {
-      background-color: rgb(85, 85, 85);
+      background-color: rgb(255, 0, 0);
       padding: 10px;
       text-align: center;
-      border: 2px solid #000000;
+      border: 2px solid #51ff00;
       color: white;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScdwX-5SgudN99DbaA1BRFV8lUlGT2mhhtNw&s);
@@ -38,7 +38,8 @@
 
   <div class="container">
     <div class="box"><h1>Elenemigos.com</h1></div>
- 
+    <p>hola pijes esta es mi pagina para piratear videojueguitos bueno denle like suscribirse y darle a la campanita</p>
+    
 
 </body>
 </html>
