modified:   misitio/estilo.css 	modified:   misitio/misitio.html

--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="/misitio/estilo.css">
 </head>
 <body>
-  
+  <div class="box">
+    <p>ELENEMIGOS.COM</p>
+  </div>
+
+  <div class="juegodia">
+     <h2>Juego del dia</h2>
+  </div>
+ 
+
 </body>
 </html>
