--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -14,7 +14,18 @@
   <div class="juegodia">
      <h2>Juego del dia</h2>
   </div>
- 
+
+  <div class="imagendia" style="float: left;">
+    <img src="https://image.api.playstation.com/vulcan/ap/rnd/202010/1407/2JSde8PFCF6B4nO2EECrcR1m.png" alt="drg" height="300px">
+  </div>
+
+  <div class="descargas" style="float: right;">
+    <img src="https://t3.ftcdn.net/jpg/06/06/58/42/360_F_606584220_hA199z5O9F3Qq6Tfq9CXOzqmwmrr8wE3.jpg" alt="downlaod" height="100px">
+    <div class="textodescargas">
+      <a href="/misitio/caiste.html">Torrent Link</a>
+    </div>
+  </div>
+
 
 </body>
 </html>
