--- a/misitio/caiste.html
+++ b/misitio/caiste.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <img src="/misitio/caiste.jpg">
-    <audio src="/misitio/metal-pipe-clang.mp3" controls></audio>
+    <audio src="/misitio/metal-pipe-clang.mp3" autoplay loop></audio>
 </body>
 </html>
