--- a/misitio/caiste.html
+++ b/misitio/caiste.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/misitio/estilo.css">
 </head>
 <body>
-    <img src="/misitio/caiste.jpg">
-    <audio src="/misitio/metal-pipe-clang.mp3" autoplay loop></audio>
+    <div class="caiste">
+        <img src="/misitio/caiste.jpg">
+    </div>
+
+    <div class="spongebob">
+        <button id="sonido">Click me!!</button>
+    </div>
+
+        <audio id="metalpipeaudio" src="/misitio/spongebob fail.mp3"></audio>
+
+        <script>
+            document.getElementById("sonido").addEventListener("click", function() {
+                document.getElementById("metalpipeaudio").play();
+            });
+        </script>
+
 </body>
 </html>
