modified:   misitio/misitio.html

--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -7,18 +7,23 @@
   <link rel="stylesheet" href="/misitio/estilo.css">
 </head>
 <body>
+
+  <!--Título de la página-->
   <div class="box">
     <p>ELENEMIGOS.COM</p>
   </div>
 
+  <!--Texto "Juego del dia"-->
   <div class="juegodia">
      <h2>Juego del dia</h2>
   </div>
 
+  <!--Imagen del juego-->
   <div class="imagendia" style="float: left;">
     <img src="https://image.api.playstation.com/vulcan/ap/rnd/202010/1407/2JSde8PFCF6B4nO2EECrcR1m.png" alt="drg" height="300px">
   </div>
 
+  <!--Imagen y link de descargas-->
   <div class="descargas" style="float: right;">
     <img src="https://t3.ftcdn.net/jpg/06/06/58/42/360_F_606584220_hA199z5O9F3Qq6Tfq9CXOzqmwmrr8wE3.jpg" alt="downlaod" height="100px">
     <div class="textodescargas">
