--- a/misitio/caiste.html
+++ b/misitio/caiste.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Relaciona el archivo .css-->
     <link rel="stylesheet" href="/misitio/estilo.css">
 </head>
 <body>
@@ -11,6 +12,7 @@
         <img src="/misitio/caiste.jpg">
     </div>
 
+    <!--El botón "Click me!!"-->
     <div class="spongebob">
         <button id="sonido">Click me!!</button>
     </div>
