--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Misitio</title>
+  <!--Relaciona el archivo .css-->
   <link rel="stylesheet" href="/misitio/estilo.css">
 </head>
 <body>
@@ -25,10 +26,8 @@
 
   <!--Imagen y link de descargas-->
   <div class="descargas" style="float: right;">
-    <img src="https://t3.ftcdn.net/jpg/06/06/58/42/360_F_606584220_hA199z5O9F3Qq6Tfq9CXOzqmwmrr8wE3.jpg" alt="downlaod" height="100px">
-    <div class="textodescargas">
-      <button><a href="/misitio/caiste.html">Torrent Link</a></button><a href="/misitio/caiste.html">
-    </div>
+      <a href="/misitio/caiste.html"><img src="https://t3.ftcdn.net/jpg/06/06/58/42/360_F_606584220_hA199z5O9F3Qq6Tfq9CXOzqmwmrr8wE3.jpg" alt="downlaod" height="200px"></a>
+    
   </div>
 
 
