modified:   misitio/estilo.css 	modified:   misitio/misitio.html

--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -27,9 +27,14 @@
   <!--Imagen y link de descargas-->
   <div class="descargas" style="float: right;">
       <a href="/misitio/caiste.html"><img src="https://t3.ftcdn.net/jpg/06/06/58/42/360_F_606584220_hA199z5O9F3Qq6Tfq9CXOzqmwmrr8wE3.jpg" alt="downlaod" height="200px"></a>
-    
   </div>
 
+  <!--Segundo título de la página-->
+  <div class="segundo-titulo" style="clear: both;">
+    <h2>¿Quienes somos?</h2>
+  </div>
+    
+  
 
 </body>
 </html>
