modified:   misitio/caiste.html 	modified:   misitio/estilo.css 	modified:   misitio/misitio.html

--- a/misitio/caiste.html
+++ b/misitio/caiste.html
@@ -19,6 +19,8 @@
 
         <audio id="metalpipeaudio" src="/misitio/spongebob fail.mp3"></audio>
 
+        <!--Este script hace que al clickar el botón se reproduzca el audio de bob esponja-->
+        <!--Te voy a ser sincero Antonio, no tengo ni idea de como hacer scripts, estuve como media hora intentando averiguar como hacer que funcionase y al final me rendí y se lo pregunté a chatgpt-->
         <script>
             document.getElementById("sonido").addEventListener("click", function() {
                 document.getElementById("metalpipeaudio").play();
