--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -31,8 +31,32 @@
 
   <!--Segundo título de la página-->
   <div class="segundo-titulo" style="clear: both;">
-    <h2>¿Quienes somos?</h2>
+    <h2>¿Quiénes somos?</h2>
   </div>
+
+  <!--Texto del segundo título-->
+  <div class="texto2">
+    <div>
+      Somos una entidad anónima que se dedica a la piratería de juegos, nuestro nombre es <strong>ELENEMIGOS®</strong> (Para nada una copia de elamigos). 
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni praesentium delectus tempora aspernatur, omnis nulla suscipit distinctio explicabo non unde architecto veniam expedita nobis ea porro ad nesciunt molestias pariatur?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ayudadme porfavor, no quiero ir a recuperaciones Magni quod laborum facilis fugiat quam necessitatibus harum iste delectus officia, qui ullam magnam earum accusantium quia distinctio. Error cumque eius natus.
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit ratione porro placeat natus ut a, Eloy ha estado aquí veniam cum id dolorum animi harum eaque veritatis molestiae, in quo numquam culpa aspernatur quae!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum debitis aperiam commodi reiciendis laudantium Noel también ha estado aquí iste nihil deleniti sed quaerat architecto impedit, neque, eos quod placeat temporibus ipsa, perferendis exercitationem unde?
+    </div>
+
+    <div class="lista">
+      <ul>
+        <li>¿A que nos dedicamos?</li>
+        <ul>
+          <li>A la piratería, duh</li>
+          <li>A hacer ensaladas de patata</li>
+          <li>A derrocar al gobierno español</li>
+          <li>A molestar a antonio en medio de clase</li>
+          <li></li>
+        </ul>
+      </ul>
+    </p>
+    </div>
     
   
 
