new file:   misitio.rar 	new file:   misitio/JUDGEMENT.html 	modified:   misitio/estilo.css 	new file:   misitio/minosprimestatus.gif 	modified:   misitio/misitio.html

--- a/misitio/misitio.html
+++ b/misitio/misitio.html
@@ -38,10 +38,10 @@
   <div class="texto2">
     <div>
       Somos una entidad anónima que se dedica a la piratería de juegos, nuestro nombre es <strong>ELENEMIGOS®</strong> (Para nada una copia de elamigos). 
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni praesentium delectus tempora aspernatur, omnis nulla suscipit distinctio explicabo non unde architecto veniam expedita nobis ea porro ad nesciunt molestias pariatur?
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ayudadme porfavor, no quiero ir a recuperaciones Magni quod laborum facilis fugiat quam necessitatibus harum iste delectus officia, qui ullam magnam earum accusantium quia distinctio. Error cumque eius natus.
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit ratione porro placeat natus ut a, Eloy ha estado aquí veniam cum id dolorum animi harum eaque veritatis molestiae, in quo numquam culpa aspernatur quae!
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum debitis aperiam commodi reiciendis laudantium Noel también ha estado aquí iste nihil deleniti sed quaerat architecto impedit, neque, eos quod placeat temporibus ipsa, perferendis exercitationem unde?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni praesentium delectus tempora aspernatur, omnis nulla suscipit distinctio explicabo non unde arc<img src="https://img.itch.zone/aW1nLzE3MjU3OTQxLmpwZw==/original/dJxrg4.jpg" height="15px">hitecto veniam expedita nobis ea ad nesciunt molestias pariatur?
+      Lorem ipsum dolor sit amTHIS WILL HURTet, consectetur adipisicing elit. Ayudadme porfavor, no quiero ir a recupTWICE, BEATEN BY AN OBJECT, TWICE!!!eraciones Magni quod laborum facilis fugiat quam necessitatibus harum iste delectus officia, qui ullam magnam earum accusantium quia distinctio. Error cumque eius natus.
+      Lorem ipsum, dolor sit amet conseTHY END IS NOWctetur adipisicing elit. Reprehenderit ratione porro placeat natus ut a, Eloy ha estado aquí veniam cum iYOU SHOULD OFIMÁTICAS YOURSELF RIGHT NOW!!!!d dolorum animi harum MACHINE, TRANS RIGHTS NOW.eaque veritatis molestiae, in quo numquam culpa aspernatur quae!
+      Lorem ipsum JUDGEMENT!!!!, dolor sit amet consectetur adipisicing elit. Laborum debitis aperiam commodi reiciendis laudantium Noel también ha estado aquí iste nihil deleniti sed quaerat architecto impedit, neque, eos quod placeat temporibus ipsa, perferendis exercitationem unde?
     </div>
 
     <div class="lista">
@@ -52,12 +52,55 @@
           <li>A hacer ensaladas de patata</li>
           <li>A derrocar al gobierno español</li>
           <li>A molestar a antonio en medio de clase</li>
-          <li></li>
+          <li>¿Por que sigues leyendo esto?</li>
+          <li>Perdón por el punto de antes porfavor antonio no me bajes la nota</li>
         </ul>
       </ul>
     </p>
     </div>
-    
+
+  <div class="tabla">
+    <table>
+      <tr>
+        <th>VPN</th>
+        <th>Gratis?</th>
+        <th>No se que poner aquí</th>
+        <th>Descargar</th>
+      </tr>
+      <tr>
+        <td>Mullvad</td>
+        <td>No</td>
+        <td>Those who know :skullemoji:</td>
+        <td><a href="https://mullvad.net/es/account/login">aquí</a></td>
+      </tr>
+      <tr>
+        <td>La VPN de paquito</td>
+        <td>Si, mucho</td>
+        <td>Paquito</td>
+        <td><a href="https://www.youtube.com/watch?v=YAgJ9XugGBo">aquí</a></td>
+      </tr>
+      <tr>
+        <td>La VPN de giliberto</td>
+        <td>UN MILLÓN DE EUROS</td>
+        <td>OTRO MILLÓN DE EUROS</td>
+        <td><a href="https://www.youtube.com/shorts/97z0tc75QAw">aquí</a></td>
+      </tr>
+      <tr>
+        <td>JUDGEMENT</td>
+        <td>THY END IS NOW</td>
+        <td>USELESS</td>
+        <td><a href="JUDGEMENT.html">aquí</a></td>
+      </tr>
+    </table>
+  </div>  
+  
+  <div class="linea">
+    <p>-</p>
+  </div>
+  <div class="imagen">
+    <img src="https://img.itch.zone/aW1nLzE3MjU3OTQxLmpwZw==/original/dJxrg4.jpg" width="100px">
+  </div>
+
   
 
 </body>
